fix overflow problem on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -25,12 +25,14 @@ body{
 	background-color: rgb(100,100,100);
 	transition: background-color 0.5s;
 }
+
 .section-selector.selected{
 	background-color: rgb(255, 255, 255);
 }
 
 #sections-container{
 	position: relative;
+	overflow: hidden;
 	height: 100%;
 	width: 100vw;
 	touch-action: none;
